added missing Proposal(s) APIs
